--- a/imports/ui/pages/class/visualization/visualization.html
+++ b/imports/ui/pages/class/visualization/visualization.html
@@ -1,46 +1,150 @@
 <template name="visualization">
     {{#onLoaded loaded=loadComplete}}
-    <div>
-        <div class="block p-4">
-            <p class="mt-4 text-lightdark">{{i18n "visualization.overview"}}</p>
-            <!-- <div id="simpleGraph"></div> -->
-            <div class="graphcard" id="graphcard"></div>
-            <!-- <div class="graphwraper"> -->
-            <!-- <div id="myDynamicTable" class="table mb-0"></div> -->
-            <!-- <div class="datetable">
-                <div id="setDate" class="date text-info"></div>
-              </div> -->
-            <!--JS-->
-            <!-- </div> -->
-            <!-- drop-down -->
-            <!-- <div id="container"></div>
-            <br />
-            <div>
-              <button id="generate">Generate</button>
-            </div> -->
-            <!-- end drop-down... -->
-            <div style="display: flex; justify-content: space-between">
-                <div style="margin-top: 30px; color: #777">
-                    {{i18n "visualization.description"}}
+        <div class="graphcard bg-white d-print-none">
+            <div class="flexwraper">
+                <div class="graphtitle">
+                    <!-- graph alpha level -->
+                    {{#each level in alphaLevels}}
+                        <div class="graph-title text-secondary">{{level}}</div>
+                    {{/each}}
+                    <!-- end graph alpha level -->
                 </div>
-                <div style="margin-top: 30px">
-                    <div class="d-flex align-items-center">
-                        <div style="color: #777">{{i18n "visualization.testDate"}}:</div>
-                        <div class="selectoption ml-3">
-                            {{!--
-                            <select class="form-control select-control">
-                                <option>Test Wom 29.09.2020</option>
-                                <option>Test Wom 30.09.2020</option>
-                            </select>
-                            --}}
+                <div class="graplist customscroll">
+                    <div class="graphtable" id="graphwrap">
+                        <!-- graph value -->
+                        {{#each level in alphaLevels}}
+                            <div class="graph-wrapper">
+                                {{#each dateValue in dates}}
+                                    <div class="graphloop">
+                                        <div class="barchart">
+                                            <!-- display user data graph value -->
+                                            {{#each userDataValue in
+                                                    (getUserData dateValue level)}}
+                                                {{#if gt userDataValue.value 0}}
+                                                    <div class="barline clickable {{#if
+                                                            isActive
+                                                            userDataValue.name}}hover{{/if}} {{#if
+                                                            isPassive
+                                                            userDataValue.name}}passive-user{{/if}}"
+                                                         id="{{userDataValue.name}}"
+                                                         style="height: {{userDataValue.value}}%;">
+                                                        <!-- set hover bar value -->
+                                                        <div class="hoverbox"
+                                                             id="mystickytooltip">
+                                                            <div class="atip"
+                                                                 id="sticky0">
+                                                                <h5 class="mb-0">
+                                                                    <b>{{userDataValue.name}}</b>
+                                                                </h5>
+                                                                <p class="dateText">{{dateValue}}</p>
+
+                                                                {{!-- on hover display alpha level & level value --}}
+                                                                <div class="mt-2">
+                                                                    {{#each res
+                                                                            in
+                                                                            userDataValue.result}}
+                                                                        <h6>{{res.alpha}}
+                                                                            : {{res.value}}
+                                                                            %</h6>
+                                                                    {{/each}}
+                                                                </div>
+                                                                {{!-- end on hover display alpha level & level value --}}
+                                                            </div>
+                                                        </div>
+                                                        <!-- end set hover bar value -->
+                                                    </div>
+                                                {{/if}}
+                                            {{/each}}
+                                            <!-- end display user data graph value -->
+                                        </div>
+                                    </div>
+                                {{/each}}
+                            </div>
+                        {{/each}}
+                        <!-- end graph value -->
+                        <div class="graph-bottom-navigation graph-wrapper">
+                            {{#each date in dates}}
+                                <div class="date-lists">{{date}}</div>
+                            {{/each}}
                         </div>
                     </div>
                 </div>
             </div>
-
-            <div id="GraphCol" class="row mt-5"></div>
+            <div class="g-actions d-print-none">
+                <div class="selctmenu">
+                    <div class="dropdownmenu dropdown">
+                        <div class="labelvalue text-muted"
+                             data-toggle="dropdown">
+                            {{i18n "visualization.filter"}}
+                            {{> icon name="chevron-down"}}
+                        </div>
+                        {{#onLoaded loaded=processingComplete}}
+                            <div class="dropdown-menu-bottom dropdown-menu">
+                                {{#each name in userNames}}
+                                    <div class="dropdown-item">
+                                        <input type="checkbox" name="dropdown"
+                                               id="checkbox-{{name}}"
+                                               data-target="{{name}}"
+                                               class="user-checkbox"
+                                               value="{{name}}"
+                                               checked="{{#if isChecked
+                                                              name}}checked{{/if}}">
+                                        <label class="text-muted">{{name}}</label>
+                                    </div>
+                                {{/each}}
+                            </div>
+                        {{/onLoaded}}
+                    </div>
+                </div>
+                <div class="zoombtn">
+                    <div id="zoombar">
+                        <button type="button" id="buttonPlus"
+                                class="text-muted">-
+                        </button>
+                        <span id="zomval" class="text-muted">200%</span>
+                        <button type="button" id="buttonMinus"
+                                class="text-muted">+
+                        </button>
+                    </div>
+                </div>
+            </div>
         </div>
+    {{/onLoaded}}
 
-    </div>
+    {{! PRINT ONLY STYLE }}
+
+    {{#onLoaded loaded=loadComplete}}
+        <div class="d-none d-print-block">
+            {{#each date in dates}}
+                <h3 class="mt-4">{{date}}</h3>
+
+                <table class="table">
+                    <thead>
+                    <tr>
+                        <th>{{i18n "users.user"}}</th>
+                        {{#each level in alphaLevels.reverse}}
+                            <th>{{level}}</th>
+                        {{/each}}
+                    </tr>
+                    </thead>
+                    <tbody>
+                    {{#each name in userNames}}
+                        {{#if userHasData date name}}
+                            <tr>
+                                <td>{{name}}</td>
+                                {{#each level in alphaLevels.reverse}}
+                                    <td>
+                                        {{#with (getUserData date level name)}}
+                                            {{this.value}}
+                                        {{/with}}
+                                    </td>
+                                {{/each}}
+                            </tr>
+                        {{/if}}
+                    {{/each}}
+                    </tbody>
+                </table>
+            {{/each}}
+        </div>
     {{/onLoaded}}
 </template>
