feature(ui): user page auto-loads latest result

--- a/imports/ui/pages/user/user.html
+++ b/imports/ui/pages/user/user.html
@@ -38,7 +38,7 @@
 
                 {{! competency categories }}
                 <div class="category-filters mt-3 px-3">
-                    <small class="text-white mb-1">
+                    <small class="text-white mb-1 no-wrap">
                         {{i18n "competency.categories.title"}}
                     </small>
                     {{#each category in competencyCategories}}
@@ -61,7 +61,7 @@
 
                 {{! alpha-levels }}
                 <div class="alpha-levels mt-3 px-3">
-                    <small class="text-white mb-1">
+                    <small class="text-white mb-1 no-wrap">
                         {{i18n "pages.user.filter.alphaLevel"}}
                     </small>
                     {{#each alphaLevel in alphaLevels}}
@@ -84,7 +84,7 @@
 
                 {{! accomplishement level}}
                 <div class="accomplishment-levels mt-4 px-3">
-                    <small class="text-white mb-1">
+                    <small class="text-white mb-1 no-wrap">
                         {{i18n "pages.user.filter.accomplishments"}}
                     </small>
                     {{#each level in accomplishments}}
@@ -106,7 +106,7 @@
 
                 {{! development status }}
                 <div class="development-status mt-4 px-3">
-                    <small class="text-white mb-1">
+                    <small class="text-white mb-1 no-wrap">
                         {{i18n "pages.user.filter.development"}}
                     </small>
                     {{#each status in development}}
