refactor: exec sync with jwt instead of login and remove unused code

--- a/imports/ui/pages/class/visualization/visualization.html
+++ b/imports/ui/pages/class/visualization/visualization.html
@@ -97,7 +97,7 @@
                     </div>
                 </div>
                 <div class="zoombtn">
-                    <div id="zoombar">
+                    <div id="zoombar" class="zoombar">
                         <button type="button" id="buttonPlus"
                                 class="text-muted">-
                         </button>
