fix(ui): user page fix layout shift on card swap due to missing drop shadow

--- a/imports/ui/pages/user/user.html
+++ b/imports/ui/pages/user/user.html
@@ -269,7 +269,7 @@
                         </div>
                         {{else}}
                         {{! else render back page }}
-                            <div class="card-wrapper bg-success rounded h-100">
+                            <div class="card-wrapper bg-success rounded h-100 shadow-sm">
                                 <div class="d-flex py-2 px-3">
                                     {{exampleText competency._id}}
                                 </div>
