--- a/imports/ui/pages/user/user.html
+++ b/imports/ui/pages/user/user.html
@@ -158,6 +158,9 @@
             {{! dimension select}}
             <select id="dimension-select"
                     class="form-control border-{{color}} text-{{color}}">
+                {{#if selectOneIsActive}}
+                    <option value="">{{i18n "form.selectOne"}}</option>
+                {{/if}}
                 {{#each dimension in dimensions}}
                     <option value="{{dimension._id}}">
                         {{dimension.title}}
@@ -190,6 +193,12 @@
                 </select>
             {{/with}}
         </div>
+
+        {{#if isRecentCompleted}}
+            <div class="col-12 d-block text-right">
+                <small class="text-secondary">{{i18n "pages.user.isRecentCompleted"}}</small>
+            </div>
+        {{/if}}
     {{/onLoaded}}
     </div>
 
@@ -205,6 +214,12 @@
         </div>
     {{/if}}
 
+
+    {{#if loadingRecords}}
+        <div class="alert alert-info">
+            {{> loading title=(i18n "pages.user.loadRecords")}}
+        </div>
+    {{/if}}
 
     {{#if competencyCategories}}
         {{#each category in competencyCategories}}
